--- a/core/app/views/dm_core/admin/dashboard/_widget_recent_new_users.html.erb
+++ b/core/app/views/dm_core/admin/dashboard/_widget_recent_new_users.html.erb
@@ -14,7 +14,7 @@
           <tr>
             <td><%= user.full_name %></td>
             <td align="center"><%= "#{time_ago_in_words(user.created_at)} ago" %></td>
-            <td align="center"><%= user.last_access_at.nil? ? '<span class="label label-warning">n/a</span>'.html_safe : "#{time_ago_in_words(user.last_access_at)} ago" %></td>
+            <td align="center"><%= present(user).last_access %></td>
           </tr>
         <% end %>
       </tbody>
